@@ -3400,3 +3400,4 @@
 20110104 periph.c: make Fuller box and Melodik register the same way as
          everything else (fixes bug #3084862) (thanks, Phil) (Fred).
 20110104 nic: add .deps and Makefile to the ignore property (Fred).
+20110109 ui/widget/filesel.c: make Amiga work again (Chris Young).
